[gd_scene load_steps=17 format=2]

[ext_resource path="res://Audio/AudioManager.gd" type="Script" id=1]
[ext_resource path="res://Audio/Sfx/Damage4.wav" type="AudioStream" id=2]
[ext_resource path="res://Audio/Sfx/Damage5.wav" type="AudioStream" id=3]
[ext_resource path="res://Audio/Sfx/Collapse6.wav" type="AudioStream" id=4]
[ext_resource path="res://Audio/Sfx/Collapse5.wav" type="AudioStream" id=5]
[ext_resource path="res://Audio/Sfx/Coin.wav" type="AudioStream" id=6]
[ext_resource path="res://Audio/Sfx/Coin_Landing.wav" type="AudioStream" id=7]
[ext_resource path="res://Audio/Sfx/Shot.wav" type="AudioStream" id=8]
[ext_resource path="res://Audio/Sfx/Level_Up.wav" type="AudioStream" id=9]
[ext_resource path="res://Audio/Sfx/Reflect1.wav" type="AudioStream" id=10]
[ext_resource path="res://Audio/Sfx/Landing.wav" type="AudioStream" id=11]

[sub_resource type="Animation" id=1]
resource_name = "Dim"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath(".:volume_db")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, -6.0 ]
}

[sub_resource type="Animation" id=2]
resource_name = "FadeIn"
tracks/0/type = "value"
tracks/0/path = NodePath(".:volume_db")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ -60.0, 0.0 ]
}

[sub_resource type="Animation" id=3]
tracks/0/type = "value"
tracks/0/path = NodePath(".:volume_db")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, -60.0 ]
}

[sub_resource type="Animation" id=4]
tracks/0/type = "value"
tracks/0/path = NodePath(".:volume_db")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, -60.0 ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 1 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "stop"
} ]
}

[sub_resource type="Animation" id=5]
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath(".:volume_db")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ -6.0, 0.0 ]
}

[node name="AudioManager" type="Node"]
pause_mode = 2
script = ExtResource( 1 )

[node name="BgmCore_DONT_TOUCH_THIS" type="AudioStreamPlayer" parent="."]

[node name="PropertySetterPlayer" type="AnimationPlayer" parent="BgmCore_DONT_TOUCH_THIS"]
anims/Dim = SubResource( 1 )
anims/FadeIn = SubResource( 2 )
anims/FadeOutNoStop = SubResource( 3 )
anims/FadeOutStop = SubResource( 4 )
anims/Undim = SubResource( 5 )

[node name="Sfx_PlayerDamage" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 2 )
volume_db = -5.0

[node name="Sfx_EnemyDamage" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )
volume_db = -5.0

[node name="Sfx_EnemyCollapse" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )
volume_db = -5.0

[node name="Sfx_PlayerDie" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )
volume_db = -5.0

[node name="Sfx_Coin" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )
volume_db = -5.0

[node name="Sfx_CoinLanding" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 7 )
volume_db = -5.0

[node name="Sfx_Shot" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 8 )
volume_db = -5.0

[node name="Sfx_LevelUp" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 9 )
volume_db = -5.0

[node name="Sfx_Reflect" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 10 )
volume_db = -5.0

[node name="Sfx_Landing" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 11 )
volume_db = -5.0
